//
//  UIANDUnitTestdemoiUITests.swift
//  UIANDUnitTestdemoiUITests
//
//  Created by Knoxpo MacBook Pro on 28/12/20.
//

import XCTest

class UIANDUnitTestdemoiUITests: XCTestCase {

    override func setUpWithError() throws {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false


        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    
    func testSenarioOne() throws {
       
       let app = XCUIApplication()
        app.launchEnvironment.updateValue("scenario1", forKey: "UI_TEST_SCENARIO")
        app.launch()
        
        XCTAssertEqual(app.switches["Start timer"].value as? String, "1")
        app.switches["Start timer"].tap()
        XCTAssertEqual(app.switches["Start timer"].value as? String, "0")
        
        
        
        
        XCTAssertEqual(app.staticTexts["counter_value"].label, "Value: 123")
        app.buttons["Reset"].tap()
        XCTAssertEqual(app.staticTexts["counter_value"].label, "Value: -1")
        
        
    
    }
    
   
    
    func testSenario2() throws
    {
        
        let app = XCUIApplication()
        
        app.launchEnvironment.updateValue("scenario1", forKey:"UI_TEST_SCENARIO")
        XCTAssertEqual(app.switches["Start Timer"].value as? String, "0")
        app.switches["Start Timer"].tap()
        XCTAssertEqual(app.switches["Start Timer"].value as? String, "1")
        
        XCTAssertEqual(app.staticTexts["counte_value"].label, "Value: 456")
        app.buttons["Reset"].tap()
        XCTAssertEqual(app.staticTexts["counter_value"].label, "Value: -1")
        
        
        
        
        
        
        
        
        
        
    }
    
    

    override func tearDownWithError() throws {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() throws {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()

        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

    func testLaunchPerformance() throws {
        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
            // This measures how long it takes to launch your application.
            measure(metrics: [XCTApplicationLaunchMetric()]) {
                XCUIApplication().launch()
            }
        }
    }
}
